清理代码；添加运行效果图；更新README

--- a/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
+++ b/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
@@ -146,7 +146,7 @@
                                     FontSize="{StaticResource MediumFontSize}"
                                     Header="选项"
                                     Icon="Options24">
-                                    <StackPanel Orientation="Vertical">
+                                    <StackPanel IsEnabled="{Binding ViewModel.IsNotBusy}" Orientation="Vertical">
                                         <TextBlock
                                             d:Foreground="Black"
                                             Style="{StaticResource OptionTextStyle}"
