--- a/HomeworkProject05/PhoneNumberCrawler/App.xaml
+++ b/HomeworkProject05/PhoneNumberCrawler/App.xaml
@@ -8,7 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary Theme="Light" />
                 <ui:ControlsDictionary />
-                <ResourceDictionary Source="Assets/logos.xaml" />
+                <ResourceDictionary Source="Styles/logos.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
