--- a/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
+++ b/HomeworkProject05/PhoneNumberCrawler/MainWindow.xaml
@@ -16,8 +16,8 @@
     d:DataContext="{d:DesignInstance Type=local:MainWindow}"
     ExtendsContentIntoTitleBar="True"
     SizeChanged="OnWindowSizeChanged"
-    StateChanged="OnUiWindowStateChanged"
     WindowBackdropType="Acrylic"
+    WindowCornerPreference="RoundSmall"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.Resources>
@@ -75,53 +75,21 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid
-            Background="Transparent"
-            MouseLeftButtonDown="OnTitleBarMouseLeftClicked"
-            MouseLeftButtonUp="OnTitleBarMouseUp"
-            MouseMove="OnTitleBarMouseMove"
-            MouseRightButtonDown="OnTitleBarMouseRightButtonDown">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
-                <Image
-                    Width="20"
-                    Height="20"
-                    Source="{StaticResource BingFluentLogoDrawingImage}"
-                    Stretch="Uniform" />
-                <TextBlock
-                    Margin="10,0,0,0"
-                    VerticalAlignment="Center"
-                    d:Foreground="Black"
-                    d:Text="必应电话号码爬虫"
-                    Text="{Binding ElementName=Window, Path=Title}" />
-            </StackPanel>
-            <StackPanel
-                Grid.Column="1"
-                HorizontalAlignment="Right"
-                Orientation="Horizontal">
-                <ui:Button
-                    x:Name="MinimizeButton"
-                    Click="OnMinimizeButtonClick"
-                    Icon="LineHorizontal120"
-                    MouseOverBackground="#55FFFFFF"
-                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
-                <ui:Button
-                    x:Name="MaximizeButton"
-                    Click="OnMaximizeButtonClick"
-                    Icon="Maximize24"
-                    MouseOverBackground="#55FFFFFF"
-                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
-                <ui:Button
-                    x:Name="CloseButton"
-                    Click="OnCloseButtonClick"
-                    Icon="Dismiss24"
-                    MouseOverBackground="#F25022"
-                    Style="{StaticResource BorderLessTransparentUiButtonStyle}" />
-            </StackPanel>
-        </Grid>
+        <ui:TitleBar Background="{ui:ThemeResource}">
+            <ui:TitleBar.Header>
+                <Border Padding="10,5">
+                    <StackPanel Orientation="Horizontal">
+                        <Image HorizontalAlignment="Left" Source="{StaticResource BingFluentLogoDrawingImage}" />
+                        <TextBlock
+                            Margin="10,0,0,0"
+                            d:Foreground="Black"
+                            d:Text="标题"
+                            FontSize="{StaticResource MediumFontSize}"
+                            Text="{Binding ElementName=Window, Path=Title}" />
+                    </StackPanel>
+                </Border>
+            </ui:TitleBar.Header>
+        </ui:TitleBar>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -139,55 +107,55 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <Border Padding="5">
-                        <ScrollViewer>
-                            <StackPanel Orientation="Vertical">
-                                <ui:CardExpander
-                                    VerticalAlignment="Center"
-                                    FontSize="{StaticResource MediumFontSize}"
-                                    Header="选项"
-                                    Icon="Options24">
-                                    <StackPanel IsEnabled="{Binding ViewModel.IsNotBusy}" Orientation="Vertical">
-                                        <TextBlock
-                                            d:Foreground="Black"
-                                            Style="{StaticResource OptionTextStyle}"
-                                            Text="目标电话号码数" />
-                                        <ui:NumberBox
-                                            d:Text="100"
-                                            Icon="Phone24"
-                                            Maximum="999"
-                                            Minimum="1"
-                                            Style="{StaticResource CountNumberBoxStyle}"
-                                            Text="{Binding ViewModel.TargetCount, UpdateSourceTrigger=PropertyChanged}"
-                                            TextChanged="OnNumberBoxTextChanged"
-                                            ValidationMode="InvalidInputOverwritten" />
-                                        <ui:InfoBar Message="应为[1,999]范围内整数" Style="{StaticResource OptionInfoBarStyle}" />
-                                        <TextBlock
-                                            Margin="0,10,0,0"
-                                            d:Foreground="Black"
-                                            Style="{StaticResource OptionTextStyle}"
-                                            Text="最大URL数" />
-                                        <ui:NumberBox
-                                            d:Text="100000"
-                                            Icon="CloudLink24"
-                                            LargeChange="10000"
-                                            Maximum="999999"
-                                            Minimum="1"
-                                            SmallChange="1"
-                                            Style="{StaticResource CountNumberBoxStyle}"
-                                            Text="{Binding ViewModel.MaxUrlCount, UpdateSourceTrigger=PropertyChanged}"
-                                            TextChanged="OnNumberBoxTextChanged"
-                                            ValidationMode="InvalidInputOverwritten" />
-                                        <ui:InfoBar Message="应为[1,999,999]范围内整数" Style="{StaticResource OptionInfoBarStyle}" />
-                                    </StackPanel>
-                                </ui:CardExpander>
-                                <ui:CardExpander
-                                    FontSize="{StaticResource MediumFontSize}"
-                                    Header="历史记录"
-                                    Icon="History24">
-                                    <ListView ItemsSource="{Binding ViewModel.UrlHistory}" ScrollViewer.HorizontalScrollBarVisibility="Visible" />
-                                </ui:CardExpander>
-                            </StackPanel>
-                        </ScrollViewer>
+                        <StackPanel Orientation="Vertical">
+                            <ui:CardExpander
+                                VerticalAlignment="Center"
+                                FontSize="{StaticResource MediumFontSize}"
+                                Header="选项"
+                                Icon="Options24">
+                                <StackPanel IsEnabled="{Binding ViewModel.IsNotBusy}" Orientation="Vertical">
+                                    <TextBlock
+                                        d:Foreground="Black"
+                                        Style="{StaticResource OptionTextStyle}"
+                                        Text="目标电话号码数" />
+                                    <ui:NumberBox
+                                        d:Text="100"
+                                        Icon="Phone24"
+                                        Maximum="999"
+                                        Minimum="1"
+                                        Style="{StaticResource CountNumberBoxStyle}"
+                                        Text="{Binding ViewModel.TargetCount, UpdateSourceTrigger=PropertyChanged}"
+                                        TextChanged="OnNumberBoxTextChanged"
+                                        ValidationMode="InvalidInputOverwritten" />
+                                    <ui:InfoBar Message="应为[1,999]范围内整数" Style="{StaticResource OptionInfoBarStyle}" />
+                                    <TextBlock
+                                        Margin="0,10,0,0"
+                                        d:Foreground="Black"
+                                        Style="{StaticResource OptionTextStyle}"
+                                        Text="最大URL数" />
+                                    <ui:NumberBox
+                                        d:Text="100000"
+                                        Icon="CloudLink24"
+                                        LargeChange="10000"
+                                        Maximum="999999"
+                                        Minimum="1"
+                                        SmallChange="1"
+                                        Style="{StaticResource CountNumberBoxStyle}"
+                                        Text="{Binding ViewModel.MaxUrlCount, UpdateSourceTrigger=PropertyChanged}"
+                                        TextChanged="OnNumberBoxTextChanged"
+                                        ValidationMode="InvalidInputOverwritten" />
+                                    <ui:InfoBar Message="应为[1,999,999]范围内整数" Style="{StaticResource OptionInfoBarStyle}" />
+                                </StackPanel>
+                            </ui:CardExpander>
+                            <ui:CardExpander
+                                FontSize="{StaticResource MediumFontSize}"
+                                Header="历史记录"
+                                Icon="History24">
+                                <Grid>
+                                    <ListView MaxHeight="500" ItemsSource="{Binding ViewModel.UrlHistory}" />
+                                </Grid>
+                            </ui:CardExpander>
+                        </StackPanel>
                     </Border>
                     <ui:Button
                         x:Name="ThemeButton"
@@ -306,7 +274,7 @@
                 </Grid>
             </Border>
         </Grid>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2" Background="{ui:ThemeResource ControlOnImageFillColorDefaultBrush}">
             <Grid Margin="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
