--- a/HomeworkProject06/StudentManagemantSystem/MainWindow.xaml
+++ b/HomeworkProject06/StudentManagemantSystem/MainWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-    Title="MainWindow"
+    Title="学生管理系统"
     Width="800"
     Height="450"
     MinWidth="800"
@@ -58,7 +58,14 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:TitleBar Background="{ui:ThemeResource}" />
+        <ui:TitleBar Background="{ui:ThemeResource}">
+            <ui:TitleBar.Header>
+                <TextBlock
+                    Margin="10,0,0,0"
+                    FontSize="{StaticResource MediumFontSize}"
+                    Text="{Binding Title}" />
+            </ui:TitleBar.Header>
+        </ui:TitleBar>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
@@ -188,8 +195,24 @@
                             SelectionMode="Extended"
                             SelectionUnit="FullRow"
                             VirtualizingPanel.VirtualizationMode="Recycling">
+                            <DataGrid.ColumnHeaderStyle>
+                                <Style BasedOn="{StaticResource DefaultDataGridColumnHeaderStyle}" TargetType="DataGridColumnHeader">
+                                    <Setter Property="FontWeight" Value="SemiBold" />
+                                </Style>
+                            </DataGrid.ColumnHeaderStyle>
                             <DataGrid.Resources>
                                 <Style TargetType="DataGridCell">
+                                    <Setter Property="Height" Value="25" />
+                                    <Setter Property="FontWeight" Value="Light" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type DataGridCell}">
+                                                <Grid Background="{TemplateBinding Background}">
+                                                    <ContentPresenter VerticalAlignment="Center" />
+                                                </Grid>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
                                     <Style.Triggers>
                                         <Trigger Property="IsSelected" Value="True">
                                             <Setter Property="Background" Value="{DynamicResource {x:Static ui:ThemeResource.SystemAccentColorPrimaryBrush}}" />
