--- a/HomeworkProject06/SchaleStudentArchiveManagementSystem/App.xaml
+++ b/HomeworkProject06/SchaleStudentArchiveManagementSystem/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="StudentManagemantSystem.App"
+    x:Class="SchaleStudentArchiveManagementSystem.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
