--- a/HomeworkProject06/SchaleStudentArchiveManagementSystem/MainWindow.xaml
+++ b/HomeworkProject06/SchaleStudentArchiveManagementSystem/MainWindow.xaml
@@ -1,9 +1,9 @@
 ﻿<ui:UiWindow
-    x:Class="StudentManagemantSystem.MainWindow"
+    x:Class="SchaleStudentArchiveManagementSystem.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:StudentManagemantSystem"
+    xmlns:local="clr-namespace:SchaleStudentArchiveManagementSystem"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
